[gd_scene load_steps=13 format=3 uid="uid://qdvojuervm6f"]

[ext_resource type="Script" uid="uid://ddgbosjdrs6mp" path="res://Scripts/Enemies/Ship_script.gd" id="1_mpdkx"]
[ext_resource type="Texture2D" uid="uid://31iths3lfoc2" path="res://Assets/Img/Enemies/nave2d.png" id="4_nbvub"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ox3ac"]
atlas = ExtResource("4_nbvub")
region = Rect2(0, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_osva0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox3ac")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_eyfb8"]
length = 0.001

[sub_resource type="Animation" id="Animation_oc4rp"]
resource_name = "alert_vibration"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 0), Vector2(0, 2), Vector2(2, 2), Vector2(0, 0), Vector2(-1, -2), Vector2(0, 0), Vector2(3, 1), Vector2(3, 2), Vector2(-2, 2), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_i4cy4"]
_data = {
&"RESET": SubResource("Animation_eyfb8"),
&"alert_vibration": SubResource("Animation_oc4rp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iocl8"]
radius = 24.2056
height = 74.0232

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_16hie"]
radius = 19.8384
height = 62.1802

[sub_resource type="Gradient" id="Gradient_f2e16"]
colors = PackedColorArray(0.65098, 0, 0, 1, 0.91, 0.879667, 0, 0.447059)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cxlev"]
gradient = SubResource("Gradient_f2e16")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oyy2q"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 34.81
direction = Vector3(0.5, -0.5, 0)
initial_velocity_min = 200.0
initial_velocity_max = 400.0
gravity = Vector3(0, 98, 0)
scale_max = 5.0
color_ramp = SubResource("GradientTexture1D_cxlev")

[node name="Ship" type="CharacterBody2D" groups=["Enemy", "ship"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_mpdkx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_osva0")
frame_progress = 0.937712

[node name="Animation_Sprite" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../../Nave2D")
libraries = {
"": SubResource("AnimationLibrary_i4cy4")
}

[node name="Nave2D" type="Sprite2D" parent="."]
visible = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(3, -1)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
rotation = 0.872665
shape = SubResource("CapsuleShape2D_iocl8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.890118
shape = SubResource("CapsuleShape2D_16hie")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Restore" type="Timer" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_oyy2q")
lifetime = 0.8
one_shot = true
explosiveness = 1.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Restore" to="." method="_on_restore_timeout"]
